tests/parser/tests/cases/should_fail/invalid_float_exponent/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:12
1 |   k := 12e23.0;
  |              ^ here
  = note: expected field name access or a method call.
